added real login

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
   <form method="post" action="login.php">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" /><br />
-    <label for="zip">Zip code:</label>
-    <input type="text" id="zip" name="zip" /><br />
+    <label for="pw">Password:</label>
+    <input type="password" id="pw" name="pw" /><br />
     
     <input type="submit" value="Login" name="submit" />
   </form>
+  <p><a href="createAccount.html">Create Account</a></p>
   </div>
+  
 </body>
 </html>
